@@ -1,6 +1,8 @@
 2007-11-03  Dmitry Galinsky  <dima.exe@gmail.com>
 
-	* rails-core.el (rails-core:model-file): search namespaced models.
+	* rails-core.el (rails-core:model-file
+	rails-core:controller-file-by-model): search namespaced models and
+	controllers.
 
 	* rails-test.el (rails-test:line-regexp): applled patch by Alan Shields, 
 	don't hightlight whitespaces in test output.
